--- a/Aulas/2.CSS3/Box Model/estilo.css
+++ b/Aulas/2.CSS3/Box Model/estilo.css
@@ -1,11 +1,13 @@
-/* Modelo de caixa 
- 
+/*Modelo de caixa*/ 
+ /*
 .conteudo { 
+     
     border : 1px solid red;  
     padding-top: 20px;  
     padding-right: 20px; 
     padding-bottom: 20px; 
-    padding-left: 20px;  
+    padding-left: 20px;    
+    //
     padding: 20px 15px 10px 5px; 
     padding: 20px;  //top&bottom : 20px;left&right : 5px  
     margin-top: 20px; 
