--- a/Projetos/P3-Tec-Blog/style.css
+++ b/Projetos/P3-Tec-Blog/style.css
@@ -22,20 +22,79 @@ h1 {
     color: #4e4e4e; 
     font-size: 2.5em;   
 } 
+h2 { 
+    color: #f7b600;    
+} 
+h3 { 
+    background: #CCC;  
+    color: #565656; 
+    padding: 5px;
+}
 .branco {
      color: white;
 }  
-/* Formatação do Menu*/ 
-a:link,a:visited { 
+/* Formatação do Menu*/  
+ a:link, a:visited { 
+    color: #f7b600; 
+
+} 
+ a:hover{ 
+    text-decoration: underline;
+}  
+
+#areaCabecalho a:link, #areaCabecalho a:visited { 
     color: #FFF; 
     padding: 8px 12px ; 
 } 
-a:hover{ 
+#areaCabecalho a:hover{ 
     color: #f7b600; 
-    background: #FFF;
+    background: #FFF; 
+    text-decoration: none;
 } 
 a:active{} 
  
 a { 
     text-decoration: none;
+}
+ 
+#areaPrincipal { 
+    width: 920px; 
+    margin: 0 auto;   
+    padding: 15px;
+}
+  
+#areaPostagens { 
+    width: 660px; 
+    float: left;
+}
+ 
+#areaLateral { 
+    width: 240px; 
+    float: right;
+}
+#rodape {  
+    clear: both; 
+    text-align: center; 
+    padding: 15px;
+    background:#CCC;
+} 
+.postagem { 
+     padding:20px; 
+     margin-bottom: 20px; 
+     background: white;
+}
+.dataPostagem { 
+    font-size: 0.8em;
+    border-bottom: 1px solid #f4f4f4; 
+    padding-bottom: 10px; 
+    margin-bottom: 10px;
+    display: block;
+} 
+.conteudoLateral { 
+    background: white; 
+    margin-bottom: 20px;    
+} 
+.textoLateral{ 
+    font-size: 0.8em; 
+
 }
