--- a/Aulas/3.CSS3 intermediário e avançado/Barra Navegação Horizontal/style.css
+++ b/Aulas/3.CSS3 intermediário e avançado/Barra Navegação Horizontal/style.css
@@ -40,6 +40,40 @@ a:hover{
     background-color: #f99200; 
     color: #fff;
 } */ 
- 
+ ul { 
+     margin-bottom: 0; 
+     padding: 0; 
+     list-style-type: none;
+     width: 720px; 
+     background: #159cb0 url(fundo-horizontal.png) repeat-x; 
+     float: left;
+    } 
+ ul li {
+      /*border: 2px solid brown; */
+      float: left;
+ }
+   
+ ul a { 
+    display: block; 
+    padding: 0 2em; 
+    line-height: 2.2em; 
+    text-decoration: none; 
+    color: #fff; 
+    background: url(divisor.png) repeat-y left top;
+ } 
+  
+ ul .primeiro a { /*remove o divisor do primeiro ul  que repete em y left */
+     background: none; 
 
+ } 
+  
+ ul a:hover { 
+     color: #085662; 
+     background: #44cade;
+ }
  
+ #home #navegacao .home  a ,#sobre #navegacao .sobre a,
+ #servicos #navegacao .servicos a, #noticias #navegacao .noticias a,#contatos #navegacao .contatos a {
+    color: #085662; 
+    background: #44cade;
+} 
