--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/style.css
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/style.css
@@ -11,8 +11,10 @@
      width: 720px;
  } 
   
- ul li{ 
-     float: left;
+ ul li{  
+     border: 1px solid red;
+     float: left; 
+     background: url(imagens/aba-direita.png) no-repeat top right ;
  }
   
  li a { 
