--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/style.css
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/style.css
@@ -21,5 +21,6 @@
      display: block; 
      padding: 0 2em;
      line-height: 3em; 
-     text-decoration: none;
+     text-decoration: none; 
+     background: url(imagens/aba-esquerda.png) no-repeat;
  }
