--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/style.css
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/style.css
@@ -12,7 +12,7 @@
  } 
   
  ul li{  
-     border: 1px solid red;
+     /*border: 1px solid red;*/
      float: left; 
      background: url(imagens/aba-direita.png) no-repeat top right ;
  }
@@ -22,5 +22,18 @@
      padding: 0 2em;
      line-height: 3em; 
      text-decoration: none; 
-     background: url(imagens/aba-esquerda.png) no-repeat;
+     background: url(imagens/aba-esquerda.png) no-repeat top left; 
+     color: #FFF;
+ } 
+  
+ ul a:hover { 
+     color: #894a1f;
+ } 
+  
+ ul #atual {
+      background: url(imagens/aba-direita-atual.png) no-repeat top right; 
+ }
+  
+ ul #atual a { 
+    background: url(imagens/aba-esquerda-atual.png) no-repeat top left;
  }
