--- a/Aulas/3.CSS3 intermediário e avançado/Layouts/layout.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Layouts/layout.html
@@ -10,8 +10,27 @@
 <body>
     <div id="container"> 
         <div id="marca">Marca</div> 
-        <div id="conteudo">Conteúdo</div> 
-        <div id="navegacao">Navegação</div> 
+        <div id="conteudo">
+             <div id="conteudoPrincipal"> 
+                <h2>It is a long established fact that a reader will be distracted by the readable</h2> 
+                <p>content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letterst</p>
+             </div>
+             <div id="conteudoSecundario"> 
+                <h2>It is a long established fact that a reader will be distracted by the readable</h2> 
+                <p>content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letterst</p>
+             </div>
+        </div> 
+        <div id="navegacao">
+             <ul> 
+                 <li><a href="">Home</a></li> 
+                 <li><a href="">Sobre</a></li> 
+                 <li><a href="">Notícias</a></li> 
+                 <li><a href="">Produtos</a></li>  
+                 <li><a href="">Serviços</a></li> 
+                 <li><a href="">Cliente</a></li>
+                 <li><a href="">Contato</a></li>
+             </ul>
+        </div> 
         <div id="rodape">Rodapé</div>
     </div>
 </body>
