--- a/Aulas/3.CSS3 intermediário e avançado/Layouts/style.css
+++ b/Aulas/3.CSS3 intermediário e avançado/Layouts/style.css
@@ -3,36 +3,65 @@ body {
      background: #f2f2f2;   
 } 
  
-#container { 
-    width: 720px; 
+#container {  
+    width: 85%;/*720px*/
     margin: 0 auto; 
-    background: #fff;
+    background: #fff; 
+    min-width: 720px;
+    max-width: 960px;
 } 
  
 #marca { 
+    width: 100%;
     height: 100px; 
     background: #9E9E9E; 
     text-align: center; 
     line-height: 100px;
 }
  
- #conteudo {
-     width: 520px;
-     float: right; 
+ #conteudo { 
      border: 1px solid red;
+     width: 75%; /*520px -> 74.28*/
+     float: right; 
+     /*border: 1px solid red;*/
  } 
+
+ #conteudoPrincipal { 
+     width: 63%; /*320px -> 64*/
+     float: left; 
+
+ }
+  #conteudoSecundario { 
+      width: 34%; /*180px -> 36*/
+      float: right;
+      background: #d1d1d1; 
+  } 
+  #conteudoPrincipal h1,h2,h3, p {
+      padding-left: 20px;
+      padding-right: 20px;
+  }
   
  #navegacao { 
-     width:180px; 
+     border: 1px solid red;
+     width: 23%; /*180px -> 25.71*/
      float: left; 
      padding-top: 20px; 
      padding-bottom: 20px;
      background: #d1d1d1; 
-     border: 1px solid red;
+    /* border: 1px solid red;*/
  } 
   
  #rodape { 
      clear: both; 
      background: #c4c4c4; 
      padding: 5px;
- }
+ } 
+  
+ #navegacao li a {
+     display: block;
+     text-decoration: none; 
+} 
+ 
+ #navegacao ul{ 
+    list-style-type: none; 
+} 
